--- a/css/stylesheet7.css
+++ b/css/stylesheet7.css
@@ -256,11 +256,13 @@ body {
   width: 33.333333%;
   margin: 5% 0;
   background-color: white;
+  font-size: small;
 }
 ul {
   list-style: none;
 
   color: rgb(18, 147, 208);
+  padding: 0 1%;
 }
 li {
   padding: 5%;
